force-app/main/default/objects/CALSTAConfiguration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>for General configuration</description>
    <fields>
        <fullName>Is_Active_Case_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>For Case Trigger is Active or In-Active</description>
        <label>Is Active Case Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Tracking_Number__c</fullName>
        <description>for last  tracking number</description>
        <label>Last Tracking Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number_Year__c</fullName>
        <label>Tracking Number Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>CALSTA Configuration</label>
</CustomObject>